[2014-01-19] UNRELEASED -- Version 0.6.8.4

- New features:

  * Get changelogs also when package origin is from "Debian Backports" and not
    only "Debian", thanks Gerfried Fuchs (Closes: #714619)

  * New sort policy 'debsize' for sorting by package size, thanks Marcel Partap

- Bug fixes:

- Documentation:

  * Improve description and fix typo for the "show" command in man page, thanks
    Regid Ichira (Closes: #692173)

- Translation updates:

  * Fix inconsistent German translations (Closes: #720186)
  * Fix important error in translation in Spanish manpage, thanks Martintxo
    (Closes: #727815)

[2014-01-19] Version 0.6.8.3

- Bug fixes:

  * Avoid segfault with some status line formats (Closes: #714186)
    * src/pkg_columnizer.cc (setup_column): Avoid a crash by checking that the
      current item is really a package before accessing package properties.

- Build system changes:

  * Fix FTBFS with g++-4.8 by removing unused typedefs (Closes: #701243)
    * src/generic/apt/aptitude_resolver.universe.cc
    * src/generic/apt/resolver_manager.cc
    * src/generic/problemresolver/choice.h

  * Support Boost 1.53 (Closes: #710208)
    * configure.ac: Determine the return type of boost::make_shared.
    * src/generic/util/sqlite.h: Use that information.
    * src/generic/util/sqlite.h (statement, blob): Also befriend the new
      boost::make_shared prototype.  Some better solution may be possible at a
      later point, this is enough for now.
    * src/cmdline/mocks/terminal.h: Remove predefinition of boost::make_shared
      that conflicts with Boost 1.53.

  * Update support for automake and similar tools (autogen.sh)
    * Do not restrict them to -1.11, use default instead
    * Add --copy to automake, otherwise creates symbolic links

- Internal changes:

  * task_list is not extern
    * src/generic/apt/tasks.h:
    * src/pkg_grouppolicy.cc: Variable task_list is only used within tasks.cc,
      and need not be extern.

- Documentation:
