@@ -9,6 +9,9 @@
 
 - Bug fixes:
 
+  * Do not group packages as tasks based on their name, rather, use their
+    section (Closes: #679602)
+
 - Documentation:
 
   * Improve description and fix typo for the "show" command in man page, thanks
